# DirectoryWatcher

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.bat  build.sh
DirectoryWatcher/: CMakeLists.txt  CancelationToken.h  ClangOverrides.txt  DirectoryWatcher.cpp  DirectoryWatcher.sln  StatusFlag.h  StatusFlag.tpp  build.bat
DirectoryWatcher/Debug/: DirectoryWatcherDLL.exp
DirectoryWatcher/DirectoryWatcher/: CMakeLists.txt  CancelationToken.cpp  CancelationToken.h  ClangOverrides.txt  DirInfo.cpp  DirInfo.h  Directory.cpp  Directory.h  DirectoryWatcher.cpp  DirectoryWatcher.h  DirectoryWatcher.vcxproj  DirectoryWatcher.vcxproj.filters  DirectoryWatcherStructs.cpp  DirectoryWatcherStructs.h  Main.cpp  WorkerThread.cpp  WorkerThread.h  build ARM.bat  build.bat
DirectoryWatcher/DirectoryWatcher/Debug/: directorywatcher.obj.enc  vc140.idb
DirectoryWatcher/DirectoryWatcher/Debug/DirectoryWatcher.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DirectoryWatcher/DirectoryWatcher/Release/DirectoryWatcher.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DirectoryWatcher.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DirectoryWatcher/DirectoryWatcherDLL/: CancelationToken.cpp  CancelationToken.h  DirectoryWatcher.cpp  DirectoryWatcher.h  DirectoryWatcherDLL.vcxproj  DirectoryWatcherDLL.vcxproj.filters
DirectoryWatcher/DirectoryWatcherDLL/Debug/: vc140.idb
DirectoryWatcher/DirectoryWatcherDLL/Debug/Director.252237BC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DirectoryWatcherDLL.lastbuildstate  DirectoryWatcherDLL.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DirectoryWatcher/Release/: DirectoryWatcher.iobj  DirectoryWatcher.ipdb
DirectoryWatcher/UnitTests/: FileSystemOperation.cpp  FileSystemOperation.h  Fixtures.cpp  Fixtures.h  Main.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters
DirectoryWatcher/UnitTests/Debug/: directorywatcher.obj.enc  filesystemoperation.obj.enc  main.new.obj.enc  vc140.idb
DirectoryWatcher/UnitTests/Debug/UnitTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
DirectoryWatcher/UnitTests/Release/UnitTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
UnitTests/: FileSystemOperation.h  Main.cpp
